--- a/DAIProLi_6_esp.ipynb
+++ b/DAIProLi_6_esp.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMv76Zxpm+nS11ZevfAc4zF",
+      "authorship_tag": "ABX9TyNaWADE0/S+0oKoJzO0zBTJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -269,7 +269,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#@title Subir archivo, formato csv\n",
+        "#@title Subir archivo y formato csv\n",
         "\n",
         "# Subir el archivo y guardarlo en un diccionario\n",
         "uploaded=files.upload()\n",
@@ -410,10 +410,10 @@
         "    ax.plot(wavelengths, [vol] * len(wavelengths), absorbance[:, i], label=f'{vol} µL')\n",
         "\n",
         "# Etiquetas y título\n",
-        "ax.set_xlabel('Wavelength (nm)')\n",
-        "ax.set_ylabel('Volume (µL)')\n",
-        "ax.set_zlabel('Absorbance')\n",
-        "ax.set_title('3D Plot of Spectra at Different Volumes')\n",
+        "ax.set_xlabel(x_axis)\n",
+        "ax.set_ylabel(Leyenda)\n",
+        "ax.set_zlabel(y_axis)\n",
+        "ax.set_title(Titulo)\n",
         "\n",
         "#Guardamos el gráfico como un objecto\n",
         "spectra_plot_3D=fig\n",
@@ -838,9 +838,9 @@
         "# Creamos el archivo Zip con el nombre elegido\n",
         "with zipfile.ZipFile(zip_filename, 'w') as zipf:\n",
         "    # Add CSV files\n",
-        "    zipf.write('Datos_experimentales.csv')\n",
+        "    zipf.write('Experimental_data.csv')\n",
         "    zipf.write('DeltaAbs_expertimental.csv')\n",
-        "    zipf.write('DeltaAbs_ajuste.csv')\n",
+        "    zipf.write('DeltaAbs_fitted.csv')\n",
         "    zipf.write ('Fitting_result.csv')\n",
         "    # Add HTML files (Bokeh plots)\n",
         "    zipf.write('spectra_plot_2D.html')\n",
@@ -853,8 +853,7 @@
         "files.download(zip_filename)\n"
       ],
       "metadata": {
-        "id": "aQsLE9dc-f1q",
-        "cellView": "form"
+        "id": "aQsLE9dc-f1q"
       },
       "execution_count": null,
       "outputs": []
