--- a/DAIProLi_6_esp.ipynb
+++ b/DAIProLi_6_esp.ipynb
@@ -854,7 +854,8 @@
         "files.download(zip_filename)\n"
       ],
       "metadata": {
-        "id": "aQsLE9dc-f1q"
+        "id": "aQsLE9dc-f1q",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": []
