--- a/DAIProLi_6_esp.ipynb
+++ b/DAIProLi_6_esp.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMqWoYR0cYtlaVUzD6f2wtR",
+      "authorship_tag": "ABX9TyMTO09qR5QWCXDlx96wm05z",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -116,6 +116,79 @@
         "  else:\n",
         "    print(f\"Warning: The number of columns in the data does not match the header size\")\n",
         "  return df\n",
+        "\n",
+        "\n",
+        "#### Updated version of leeFichero\n",
+        "def leeFichero(nombrFich, colValLabel='Wavelength', intercaladas=True, separador=',', column_inter=\"Name\"):\n",
+        "    nLineas = 0\n",
+        "    colValues = []  # This will store the original column names\n",
+        "    colnames_inter = [] # This will store the original column names in the case for intercaladas\n",
+        "    matriz = None\n",
+        "\n",
+        "    # Open and read the file\n",
+        "    with open(nombrFich, 'r') as fichero:\n",
+        "        for linea in fichero:\n",
+        "            row = np.array(())\n",
+        "\n",
+        "            # If we detect the column_inter label, capture the original column names\n",
+        "            if column_inter in linea and 'Instrument Name' not in linea:\n",
+        "                colnames_inter = [dato.strip() for dato in linea.split(separador) if dato.strip()]\n",
+        "                #print(f\"Captured intercalated column names: {colnames_inter}\")  # Debugging line\n",
+        "\n",
+        "            # If we detect the column value label, capture the original column names\n",
+        "            if colValLabel in linea:\n",
+        "                colValues = [dato.strip() for dato in linea.split(separador) if dato.strip()]\n",
+        "                #print(f\"Captured column values: {colValues}\")  # Debugging line\n",
+        "\n",
+        "                # If intercaladas is True, intercalate the column names as well\n",
+        "                if intercaladas:\n",
+        "                    colValues = colnames_inter\n",
+        "                continue\n",
+        "\n",
+        "            try:\n",
+        "                # Process data lines\n",
+        "                for dato in linea.split(separador):\n",
+        "                    if dato.strip():\n",
+        "                        row = np.append(row, float(dato))\n",
+        "\n",
+        "                # Ensure the row contains data before processing\n",
+        "                if len(row) > 0:\n",
+        "                    if intercaladas:\n",
+        "                        # Only intercalate if the row has at least 2 elements\n",
+        "                        if len(row) > 1:\n",
+        "                            row = np.append(row[0], row[1::2])\n",
+        "                        else:\n",
+        "                            row = row  # Leave row as is if it only has 1 element\n",
+        "\n",
+        "                    # Initialize the matrix on the first valid data row\n",
+        "                    if nLineas == 0:\n",
+        "                        matriz = np.empty((0, len(row)))\n",
+        "\n",
+        "                    # Stack the rows into the matrix\n",
+        "                    matriz = np.vstack((matriz, row))\n",
+        "                    nLineas += 1\n",
+        "\n",
+        "            except ValueError:\n",
+        "                pass  # Skip rows that cannot be processed\n",
+        "\n",
+        "    # Convert the matrix to a DataFrame\n",
+        "    if matriz is not None:\n",
+        "        df = pd.DataFrame(matriz)\n",
+        "\n",
+        "        # Apply the intercalated column names\n",
+        "        if len(colValues) == df.shape[1]:\n",
+        "            df.columns = colValues\n",
+        "        else:\n",
+        "            print(f\"Warning: Mismatch between column names ({len(colValues)}) and data columns ({df.shape[1]}).\")\n",
+        "            df.columns = colValues[:df.shape[1]]  # Use available names if mismatch\n",
+        "\n",
+        "        return df\n",
+        "    else:\n",
+        "        print(\"No data was read from the file.\")\n",
+        "        return None\n",
+        "\n",
+        "\n",
+        "\n",
         "\n",
         "\n",
         "def preprocesaAbsorbance(df):\n",
@@ -330,7 +403,7 @@
         "Leyenda = \"Volumen (µL)\" #@param{type:\"string\"}\n",
         "\n",
         "### Opcíon para poner los espectros a 0 a una longitud de onda determinada\n",
-        "Shift_spectra= False #@param{type:\"boolean\"}\n",
+        "Shift_spectra= True #@param{type:\"boolean\"}\n",
         "target_wavelength=600 #@param{type:\"raw\"}\n",
         "\n",
         "shifted_absorbance = shift_spectra_to_zero(datos, target_wavelength)\n",
