--- a/DAIProLi_6_esp.ipynb
+++ b/DAIProLi_6_esp.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMTO09qR5QWCXDlx96wm05z",
+      "authorship_tag": "ABX9TyMkgTnLYrhar7jkv8aQvJNZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -788,14 +788,14 @@
         "\n",
         "# Gráfico de los espectros 2D\n",
         "output_file(\"spectra_plot_2D.html\")\n",
-        "save(spectra_plot_2D, title=\"Bokeh plot\",)\n",
+        "save(spectra_plot_2D, title=\"spectra_plot_2D\",)\n",
         "\n",
         "# Gráfico de los espectros 3D\n",
         "spectra_plot_3D.savefig('spectra_plot_3D.png', format='png', dpi=400) # Ajustar dpi para ajustar la resolución\n",
         "\n",
         "# Gráfico Δ Absorbancia vs volumen experimentales con el ajuste del modelo\n",
         "output_file(\"D_Absorbance_plot_fitted.html\")\n",
-        "save(D_Absorbance_plot_fitted, title=\"Bokeh plot\",)\n",
+        "save(D_Absorbance_plot_fitted, title=\"D_Absorbance_plot_fitted\",)\n",
         "\n",
         "\n",
         "# A continuación editamos los datos generados por el ajuste para guardarlos y exportarlos\n",
