--- a/DAIProLi_6_esp.ipynb
+++ b/DAIProLi_6_esp.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMkgTnLYrhar7jkv8aQvJNZ",
+      "authorship_tag": "ABX9TyPgIwNVakUCOzxBCFzvmoLy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -68,7 +68,7 @@
         "\n",
         "##Funciones específicas\n",
         "\n",
-        "def leeFichero(nombrFich, colValLabel='Wavelength nm.', intercaladas=True, separador=','):\n",
+        "def leeFichero(nombrFich, colValLabel='Wavelength', intercaladas=True, separador=','):\n",
         "  # Abrimos el fichero\n",
         "  with open(nombrFich,'r') as fichero:\n",
         "    # Inicializamos las variables\n",
@@ -143,6 +143,7 @@
         "                # If intercaladas is True, intercalate the column names as well\n",
         "                if intercaladas:\n",
         "                    colValues = colnames_inter\n",
+        "                colValues[0] = \"Wavelength (nm)\"\n",
         "                continue\n",
         "\n",
         "            try:\n",
@@ -215,8 +216,8 @@
         "      min_val = df[col].min()\n",
         "      max_val = df[col].max()\n",
         "\n",
-        "      min_wl = df[df[col] == min_val]['Wavelength nm.'].iloc[0]\n",
-        "      max_wl = df[df[col] == max_val]['Wavelength nm.'].iloc[0]\n",
+        "      min_wl = df[df[col] == min_val]['Wavelength (nm)'].iloc[0]\n",
+        "      max_wl = df[df[col] == max_val]['Wavelength (nm)'].iloc[0]\n",
         "\n",
         "      # Almacenamos en las listas\n",
         "      min_vals.append(min_val)\n",
@@ -225,19 +226,22 @@
         "      max_wave.append(max_wl)\n",
         "\n",
         "\n",
-        "  #Calculamos el primedio de las longitudes de onda correpondientes a los mínimos y máximos\n",
+        "  #Calculamos el promedio de las longitudes de onda correpondientes a los mínimos y máximos\n",
         "  avg_min_wave = np.mean(min_wave)\n",
         "  avg_max_wave = np.mean(max_wave)\n",
         "\n",
         "  # Redondeamos las longitudes al incremente más cercano de 0.5 nm\n",
-        "  avg_min_wave = round(avg_min_wave *2)/2 # Asegurando incrementos de 0.5 nm\n",
-        "  avg_max_wave = round(avg_max_wave *2)/2\n",
+        "  # avg_min_wave = round(avg_min_wave *2)/2 # Asegurando incrementos de 0.5 nm\n",
+        "  # avg_max_wave = round(avg_max_wave *2)/2\n",
         "\n",
+        "  # Instead of rounding, find the closest wavelength in the dataset for both avg_min_wave and avg_max_wave\n",
+        "  closest_min_wave = wavelength.iloc[(np.abs(wavelength - avg_min_wave)).idxmin()]\n",
+        "  closest_max_wave = wavelength.iloc[(np.abs(wavelength - avg_max_wave)).idxmin()]\n",
         "\n",
         "\n",
         "  # Encontramos las filas en el DataFrame que corresponden a las longitudes de onda redondeadas\n",
-        "  min_abs = df[df['Wavelength nm.'] == avg_min_wave].iloc[:,2:].reset_index(drop=True).T\n",
-        "  max_abs = df[df['Wavelength nm.'] == avg_max_wave].iloc[:,2:].reset_index(drop=True).T\n",
+        "  min_abs = df[df['Wavelength (nm)'] == closest_min_wave].iloc[:,2:].reset_index(drop=True).T\n",
+        "  max_abs = df[df['Wavelength (nm)'] == closest_max_wave].iloc[:,2:].reset_index(drop=True).T\n",
         "\n",
         "  # Calculamos deltaAbs como la diferencia entre los absorbancias en las longitudes de onda redondeadas\n",
         "  deltaAbs = max_abs - min_abs\n",
@@ -248,12 +252,12 @@
         "  out_df.reset_index(drop=True, inplace=True)\n",
         "  out_df.columns= ['Volume µl', 'ΔAbs']\n",
         "  # Añadimos dos columnas para poner los valores del minimo y máximo\n",
-        "  out_df[\"avg_min_wave (nm)\"] = avg_min_wave\n",
-        "  out_df[\"avg_max_wave (nm)\"] = avg_max_wave\n",
+        "  out_df[\"closest_min_wave (nm)\"] = closest_min_wave\n",
+        "  out_df[\"closest_max_wave (nm)\"] = closest_max_wave\n",
         "\n",
         "\n",
         "  # Imprimimos los valores calculados\n",
-        "  print(f'Mínimo promedio:  ({avg_min_wave} nm)\\t Máximo promedio:  ({avg_max_wave} nm)')\n",
+        "  print(f'Mínimo promedio:  ({closest_min_wave} nm)\\t Máximo promedio:  ({closest_max_wave} nm)')\n",
         "\n",
         "\n",
         "  return out_df\n",
@@ -313,24 +317,7 @@
         "\n",
         "\n",
         "########\n",
-        "\n",
-        "# Definir la función de ajuste basada en el modelo matemático\n",
-        "def binding_model (params, v):\n",
-        "    # Combinamos ambos diccionarios (params)\n",
-        "    # params={**fixed_params, **variable_params}\n",
-        "\n",
-        "    # Extraemos los parametros del dicionario combinado\n",
-        "    L = params['L']\n",
-        "    V0 = params['V0']\n",
-        "    Lo = params['Lo']\n",
-        "    Ro = params['Ro']\n",
-        "    Kd = params['Kd']\n",
-        "    epsilon = params['epsilon']\n",
-        "\n",
-        "    Lt = Lo * v / (V0 + v)\n",
-        "    Rt = Ro * V0 / (V0 + v)\n",
-        "    deltaAbs = epsilon * L * (Lt + Rt + Kd - np.sqrt((Lt + Rt + Kd)**2 - 4 * Lt * Rt)) / 2\n",
-        "    return deltaAbs"
+        "\n"
       ],
       "metadata": {
         "id": "8Wobmr5OSVRh",
@@ -351,7 +338,7 @@
         "file_name=list(uploaded.keys())[0]\n",
         "# @markdown **Columnas intercaladas**\n",
         "\n",
-        "Intercaladas = False #@param {type:\"boolean\"}\n",
+        "Intercaladas = True #@param {type:\"boolean\"}\n",
         "\n",
         "# @markdown **Separador columnas**\n",
         "Separador = \",\" #@param [\",\", \";\"]\n",
@@ -403,7 +390,7 @@
         "Leyenda = \"Volumen (µL)\" #@param{type:\"string\"}\n",
         "\n",
         "### Opcíon para poner los espectros a 0 a una longitud de onda determinada\n",
-        "Shift_spectra= True #@param{type:\"boolean\"}\n",
+        "Shift_spectra= False #@param{type:\"boolean\"}\n",
         "target_wavelength=600 #@param{type:\"raw\"}\n",
         "\n",
         "shifted_absorbance = shift_spectra_to_zero(datos, target_wavelength)\n",
@@ -469,7 +456,11 @@
         "wavelengths = df.iloc[:, 0].values  # Wavelength (nm)\n",
         "\n",
         "# Para evitar problemas asignamos 0 a \"Baseline\" y convertirmos el resto a números enteros\n",
-        "volumes = np.array([0 if col == 'Baseline' else int(col) for col in df.columns[1:]])  # Volumes (µL)\n",
+        "# volumes = np.array([0 if col == 'Baseline' else int(col) for col in df.columns[1:]])  # Volumes (µL)\n",
+        "\n",
+        "# For volumes that are floats the line above creates erros\n",
+        "volumes = np.array([0 if col == 'Baseline' else float(col) for col in df.columns[1:]])  # Volumes (µL)\n",
+        "\n",
         "\n",
         "# Absorbancia para cada volumen (Baseline incluido)\n",
         "absorbance = df.iloc[:, 1:].values\n",
@@ -569,6 +560,35 @@
     {
       "cell_type": "code",
       "source": [
+        "#@title Model\n",
+        "# Definir la función de ajuste basada en el modelo matemático\n",
+        "def binding_model (params, v):\n",
+        "    # Combinamos ambos diccionarios (params)\n",
+        "    # params={**fixed_params, **variable_params}\n",
+        "\n",
+        "    # Extraemos los parametros del dicionario combinado\n",
+        "    L = params['L']\n",
+        "    V0 = params['V0']\n",
+        "    Lo = params['Lo']\n",
+        "    Ro = params['Ro']\n",
+        "    Kd = params['Kd']\n",
+        "    epsilon = params['epsilon']\n",
+        "\n",
+        "    Lt = Lo * v / (V0 + v)\n",
+        "    Rt = Ro * V0 / (V0 + v)\n",
+        "    deltaAbs = epsilon * L * (Lt + Rt + Kd - np.sqrt((Lt + Rt + Kd)**2 - 4 * Lt * Rt)) / 2\n",
+        "    return deltaAbs"
+      ],
+      "metadata": {
+        "cellView": "form",
+        "id": "WKo01AwWnlMO"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# @title Parámetros\n",
         "# @markdown **Parámetros fijos y a optimizar**\n",
         "# @markdown Selecciona los parametros fijos y aquellos a optimizar:\n",
@@ -590,20 +610,20 @@
         "# @markdown\n",
         "\n",
         "# @markdown **- L0 [µM] (concentración solución inicial ApoMgb - Ligando)**\n",
-        "Lo_fixed = \"Yes\"  # @param [\"Yes\", \"No\"]\n",
-        "Lo = 55  # @param {type:\"number\"}\n",
+        "Lo_fixed = \"No\"  # @param [\"Yes\", \"No\"]\n",
+        "Lo = 550  # @param {type:\"number\"}\n",
         "\n",
         "# @markdown\n",
         "\n",
         "# @markdown **- R0 [µM] (concentración solución inicial Hemoglobina - Receptor)**\n",
-        "Ro_fixed = \"No\"  # @param [\"Yes\", \"No\"]\n",
-        "Ro = 2  # @param {type:\"number\"}\n",
+        "Ro_fixed = \"Yes\"  # @param [\"Yes\", \"No\"]\n",
+        "Ro = 10  # @param {type:\"number\"}\n",
         "\n",
         "# @markdown\n",
         "\n",
         "# @markdown **- Kd**\n",
         "Kd_fixed = \"No\"  # @param [\"Yes\", \"No\"]\n",
-        "Kd = 0.1  # @param {type:\"number\"}\n",
+        "Kd = 100  # @param {type:\"number\"}\n",
         "\n",
         "# @markdown\n",
         "\n",
