--- a/DAIProLi_6_esp.ipynb
+++ b/DAIProLi_6_esp.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPgIwNVakUCOzxBCFzvmoLy",
+      "authorship_tag": "ABX9TyPbu08CK+0B8gObvVP2cTl3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,6 +31,7 @@
       "source": [
         "\n",
         "# Determinación de Afinidad de Interacción entre Proteína y Ligando\n",
+        "\n",
         "\n"
       ],
       "metadata": {
@@ -320,8 +321,7 @@
         "\n"
       ],
       "metadata": {
-        "id": "8Wobmr5OSVRh",
-        "cellView": "form"
+        "id": "8Wobmr5OSVRh"
       },
       "execution_count": null,
       "outputs": []
@@ -560,7 +560,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#@title Model\n",
+        "#@title Modelo\n",
         "# Definir la función de ajuste basada en el modelo matemático\n",
         "def binding_model (params, v):\n",
         "    # Combinamos ambos diccionarios (params)\n",
@@ -580,7 +580,6 @@
         "    return deltaAbs"
       ],
       "metadata": {
-        "cellView": "form",
         "id": "WKo01AwWnlMO"
       },
       "execution_count": null,
