--- a/DAIProLi_6_esp.ipynb
+++ b/DAIProLi_6_esp.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPbu08CK+0B8gObvVP2cTl3",
+      "authorship_tag": "ABX9TyPCN3pqmxTJnsyrcVic6hFm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -321,7 +321,8 @@
         "\n"
       ],
       "metadata": {
-        "id": "8Wobmr5OSVRh"
+        "id": "8Wobmr5OSVRh",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": []
@@ -338,7 +339,7 @@
         "file_name=list(uploaded.keys())[0]\n",
         "# @markdown **Columnas intercaladas**\n",
         "\n",
-        "Intercaladas = True #@param {type:\"boolean\"}\n",
+        "Intercaladas = False #@param {type:\"boolean\"}\n",
         "\n",
         "# @markdown **Separador columnas**\n",
         "Separador = \",\" #@param [\",\", \";\"]\n",
@@ -580,7 +581,8 @@
         "    return deltaAbs"
       ],
       "metadata": {
-        "id": "WKo01AwWnlMO"
+        "id": "WKo01AwWnlMO",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": []
