--- a/DAIProLi_6_esp.ipynb
+++ b/DAIProLi_6_esp.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPCN3pqmxTJnsyrcVic6hFm",
+      "authorship_tag": "ABX9TyMpsQlL390iSqXr7Q+vQqK6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,7 +48,7 @@
         "import math\n",
         "import pandas as pd\n",
         "import csv\n",
-        "import zipfile\n",
+        "import zipfile # Necesario para comprimir los archivos en formato zip\n",
         "\n",
         "from bokeh.io import output_notebook, show, export_png\n",
         "from bokeh.plotting import figure, output_file, save\n",
