--- a/DAIProLi_6_esp.ipynb
+++ b/DAIProLi_6_esp.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMpsQlL390iSqXr7Q+vQqK6",
+      "authorship_tag": "ABX9TyN+BHe0OJ6AgRVmewclEenC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -846,24 +846,30 @@
         "    # Headers\n",
         "    writer.writerow(['initialPar', '', '', 'parAjustados', '', '', 'sdPar'])\n",
         "\n",
-        "    # Row 1: L, V0, Lo\n",
+        "    # Row 1: L, V0, Lo (verificamos si se optimizan o no, y si no tienen sdPar)\n",
         "    writer.writerow([\n",
-        "        'L', results['initialPar']['L'], '', 'Ro', results['parAjustados']['Ro'], '', 'Ro_std', results['sdPar']['Ro_std']\n",
+        "        'L', results['initialPar']['L'], '', 'Ro', results['parAjustados']['Ro'], '',\n",
+        "        'Ro_std', results['sdPar'].get('Ro_std', '') if 'Ro' in variable_params else ''  # Mostrar Ro_std solo si es variable\n",
         "    ])\n",
         "    writer.writerow([\n",
-        "        'V0', results['initialPar']['V0'], '', 'Kd', results['parAjustados']['Kd'], '', 'Kd_std', results['sdPar']['Kd_std']\n",
+        "        'V0', results['initialPar']['V0'], '', 'Kd', results['parAjustados']['Kd'], '',\n",
+        "        'Kd_std', results['sdPar'].get('Kd_std', '') if 'Kd' in variable_params else ''  # Mostrar Kd_std solo si es variable\n",
         "    ])\n",
         "    writer.writerow([\n",
-        "        'Lo', results['initialPar']['Lo'], '', 'epsilon', results['parAjustados']['epsilon'], '', 'epsilon_std', results['sdPar']['epsilon_std']\n",
+        "        'Lo', results['initialPar']['Lo'], '', 'epsilon', results['parAjustados']['epsilon'], '',\n",
+        "        'epsilon_std', results['sdPar'].get('epsilon_std', '') if 'epsilon' in variable_params else ''  # Mostrar epsilon_std solo si es variable\n",
         "    ])\n",
         "    writer.writerow([\n",
-        "        'Ro', results['initialPar']['Ro'], '', 'L', results['parAjustados']['L'], '', ''\n",
+        "        'Ro', results['initialPar']['Ro'], '', 'L', results['parAjustados']['L'], '',\n",
+        "        'L_std', results['sdPar'].get('L_std', '') if 'L' in variable_params else ''  # Mostrar L_std solo si es variable\n",
         "    ])\n",
         "    writer.writerow([\n",
-        "        'Kd', results['initialPar']['Kd'], '', 'V0', results['parAjustados']['V0'], '', ''\n",
+        "        'Kd', results['initialPar']['Kd'], '', 'V0', results['parAjustados']['V0'], '',\n",
+        "        'V0_std', results['sdPar'].get('V0_std', '') if 'V0' in variable_params else ''  # Mostrar V0_std solo si es variable\n",
         "    ])\n",
         "    writer.writerow([\n",
-        "        'epsilon', results['initialPar']['epsilon'], '', 'Lo', results['parAjustados']['Lo'], '', ''\n",
+        "        'epsilon', results['initialPar']['epsilon'], '', 'Lo', results['parAjustados']['Lo'], '',\n",
+        "        'Lo_std', results['sdPar'].get('Lo_std', '') if 'Lo' in variable_params else ''  # Mostrar Lo_std solo si es variable\n",
         "    ])\n",
         "\n",
         "    # Add blank rows\n",
@@ -918,6 +924,7 @@
         "    writer.writerow(['status', results['detalles']['status']])\n",
         "    writer.writerow(['message', results['detalles']['message']])\n",
         "    writer.writerow(['success', results['detalles']['success']])\n",
+        "\n",
         "\n",
         "\n",
         "# Ahora procedemos a guardar todos los archivos y comprimirlos en un zip\n",
