--- a/DAIProLi_7.ipynb
+++ b/DAIProLi_7.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNv/6QjKJPbbM11/Qr0Av64",
+      "authorship_tag": "ABX9TyPfJGQxD1hg2aWsBTYVhjnc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -564,13 +564,13 @@
         "\n",
         "# @markdown\n",
         "\n",
-        "# @markdown **- L0 [µM] (initial solution concentration ApoMgb - Ligand)**\n",
+        "# @markdown **- L0 [µM] (initial solution concentration of Ligand)**\n",
         "Lo_fixed = \"Yes\"  # @param [\"Yes\", \"No\"]\n",
         "Lo = 55  # @param {type:\"number\"}\n",
         "\n",
         "# @markdown\n",
         "\n",
-        "# @markdown **- R0 [µM] (initial solution concentration Hemo - Receptor)**\n",
+        "# @markdown **- R0 [µM] (initial solution concentration of Receptor)**\n",
         "Ro_fixed = \"No\"  # @param [\"Yes\", \"No\"]\n",
         "Ro = 2  # @param {type:\"number\"}\n",
         "\n",
