--- a/DAIProLi_7.ipynb
+++ b/DAIProLi_7.ipynb
@@ -28,7 +28,7 @@
       },
       "outputs": [],
       "source": [
-        "#@title Modules and functions\n",
+        "#@title Environment\n",
         "#@markdown You need to run this cell only once regardless of the number of datasets to be evaluated.\n",
         "\n",
         "\n",
@@ -49,7 +49,6 @@
         "\n",
         "from google.colab import files\n",
         "from datetime import datetime\n",
-        "import os\n",
         "\n",
         "# This is not definitive, the final solution will be to upload the module into the Unizar's GitHub\n",
         "!git clone https://github.com/unizar-flav/DAIProLi.git\n",
@@ -294,7 +293,7 @@
         "file_name=list(uploaded.keys())[0]\n",
         "# @markdown **Interspersed Columns**\n",
         "\n",
-        "Interspersed = True #@param {type:\"boolean\"}\n",
+        "Interspersed = False #@param {type:\"boolean\"}\n",
         "\n",
         "# @markdown **Columns Separator**\n",
         "Separator = \",\" #@param [\",\", \";\"]\n",
@@ -313,7 +312,7 @@
       },
       "outputs": [],
       "source": [
-        "#@title diff_absorbance\n",
+        "#@title Absorbance Difference\n",
         "print(\"**diff_absorbance:**\")\n",
         "\n",
         "#@markdown Here it is advisable to run the function with\n",
@@ -358,7 +357,7 @@
       "source": [
         "#@title Spectra plot\n",
         "# @markdown In the spaces below you\n",
-        "# @markdown can write the title, the axis and leyend titles\n",
+        "# @markdown can write the title, the axis and Legend titles\n",
         "\n",
         "\n",
         "### Title of the plot\n",
@@ -371,7 +370,7 @@
         "x_axis = \"Wavelength (nm)\" #@param{type:\"string\"}\n",
         "\n",
         "### Title legend\n",
-        "Leyend = \"Volume (µL)\" #@param{type:\"string\"}\n",
+        "Legend = \"Volume (µL)\" #@param{type:\"string\"}\n",
         "\n",
         "### Option to set the spectra at 0 at a specific wavelength\n",
         "Shift_spectra= True #@param{type:\"boolean\"}\n",
@@ -415,8 +414,8 @@
         "for idx, col in enumerate(df.columns[1:]):\n",
         "    p.line(df.iloc[:, 0], df[col], legend_label=f'{col}', line_width=2, color=colors[idx])\n",
         "\n",
-        "# Personalize the leyend Personalizamos la leyenda\n",
-        "p.legend.title = Leyend\n",
+        "# Personalize the legend\n",
+        "p.legend.title = Legend\n",
         "p.legend.location = \"top_right\"\n",
         "p.legend.click_policy = \"hide\"  # Allows to hide the lines by clicking its label in the legend\n",
         "p.toolbar_location = \"below\"\n",
@@ -459,7 +458,7 @@
         "\n",
         "# Labels and title\n",
         "ax.set_xlabel(x_axis)\n",
-        "ax.set_ylabel(Leyend)\n",
+        "ax.set_ylabel(Legend)\n",
         "ax.set_zlabel(y_axis)\n",
         "ax.set_title(Title)\n",
         "\n",
@@ -491,8 +490,8 @@
         "### Title axis y\n",
         "x_axis = \"Volume (µL)\" #@param{type:\"string\"}\n",
         "\n",
-        "### Title leyend\n",
-        "Leyend = \"Δ Absorbance\" #@param{type:\"string\"}\n",
+        "### Title legend\n",
+        "Legend = \"Δ Absorbance\" #@param{type:\"string\"}\n",
         "\n",
         "\n",
         "# Display Bokeh plots in the notebook\n",
@@ -502,7 +501,7 @@
         "p = figure(width=1200, height=700, title=Title)\n",
         "\n",
         "# Add a scatter-plot\n",
-        "scatter = p.scatter(x=DeltaAbs.iloc[:, 0],y=DeltaAbs.iloc[:, 1] ,  legend_label=Leyend, color='blue', size=10)\n",
+        "scatter = p.scatter(x=DeltaAbs.iloc[:, 0],y=DeltaAbs.iloc[:, 1] ,  legend_label=Legend, color='blue', size=10)\n",
         "\n",
         "# Personalize the axis' titles\n",
         "p.xaxis.axis_label = x_axis\n",
@@ -516,10 +515,10 @@
         "p.xaxis.major_label_text_font_size = '12pt'\n",
         "p.yaxis.major_label_text_font_size = '12pt'\n",
         "\n",
-        "# Add the leyend\n",
+        "# Add the legend\n",
         "p.legend.title = 'Legend'\n",
         "\n",
-        "# Define the font size for the leyend\n",
+        "# Define the font size for the legend\n",
         "p.legend.label_text_font_size = '12pt'\n",
         "p.legend.title_text_font_size = '14pt'\n",
         "p.legend.location = \"bottom_right\"\n",
@@ -574,74 +573,70 @@
         "# @markdown **Fixed and to be Optimzed Parameters**:\n",
         "# @markdown Select the fixed parameters and those to be optimized and input the initial estimation:\n",
         "\n",
-        "import numpy as np\n",
         "# @markdown\n",
         "\n",
         "# @markdown **- L [cm] (light path length)**\n",
-        "# Use the dropdown to chose whether the parameters are fixed or not\n",
-        "L_fixed = \"Yes\"  # @param [\"Yes\", \"No\"]\n",
+        "# Use the box to chose whether the parameters are fixed or not\n",
         "L = 1  # @param {type:\"number\"}\n",
+        "L_fixed = True  # @param{type:\"boolean\"}\n",
         "\n",
         "# @markdown\n",
         "\n",
         "# @markdown **- V0 [µL] (initial solution volume)**\n",
-        "V0_fixed = \"Yes\"  # @param [\"Yes\", \"No\"]\n",
         "V0 = 1000  # @param {type:\"number\"}\n",
-        "\n",
+        "V0_fixed = True  # @param{type:\"boolean\"}\n",
         "# @markdown\n",
         "\n",
         "# @markdown **- L0 [µM] (initial solution concentration of Ligand)**\n",
-        "Lo_fixed = \"Yes\"  # @param [\"Yes\", \"No\"]\n",
         "Lo = 55  # @param {type:\"number\"}\n",
-        "\n",
+        "Lo_fixed = True  # @param{type:\"boolean\"}\n",
         "# @markdown\n",
         "\n",
         "# @markdown **- R0 [µM] (initial solution concentration of Receptor)**\n",
-        "Ro_fixed = \"No\"  # @param [\"Yes\", \"No\"]\n",
         "Ro = 2  # @param {type:\"number\"}\n",
-        "\n",
+        "Ro_fixed = False  # @param{type:\"boolean\"}\n",
         "# @markdown\n",
         "\n",
         "# @markdown **- Kd**\n",
-        "Kd_fixed = \"No\"  # @param [\"Yes\", \"No\"]\n",
         "Kd = 100  # @param {type:\"number\"}\n",
+        "Kd_fixed = False  # @param{type:\"boolean\"}\n",
         "\n",
         "# @markdown\n",
         "\n",
         "# @markdown **- epsilon**\n",
-        "epsilon_fixed = \"No\"  # @param [\"Yes\", \"No\"]\n",
         "epsilon = 0.1  # @param {type:\"number\"}\n",
+        "epsilon_fixed = False  # @param{type:\"boolean\"}\n",
         "\n",
         "# Initialize list for the fixed and variable parameters (these last ones are to be optimized later)\n",
         "fixed_params = {}\n",
         "variable_params = {}\n",
         "\n",
-        "if L_fixed == \"Yes\":\n",
+        "if L_fixed:\n",
         "    fixed_params['L'] = L\n",
         "else:\n",
         "    variable_params['L'] = L\n",
         "\n",
-        "if V0_fixed == \"Yes\":\n",
+        "if V0_fixed:\n",
         "    fixed_params['V0'] = V0\n",
         "else:\n",
         "    variable_params['V0'] = V0\n",
         "\n",
-        "if Lo_fixed == \"Yes\":\n",
+        "if Lo_fixed:\n",
         "    fixed_params['Lo'] = Lo\n",
         "else:\n",
         "    variable_params['Lo'] = Lo\n",
         "\n",
-        "if Ro_fixed == \"Yes\":\n",
+        "if Ro_fixed:\n",
         "    fixed_params['Ro'] = Ro\n",
         "else:\n",
         "    variable_params['Ro'] = Ro\n",
         "\n",
-        "if Kd_fixed == \"Yes\":\n",
+        "if Kd_fixed:\n",
         "    fixed_params['Kd'] = Kd\n",
         "else:\n",
         "    variable_params['Kd'] = Kd\n",
         "\n",
-        "if epsilon_fixed == \"Yes\":\n",
+        "if epsilon_fixed:\n",
         "    fixed_params['epsilon'] = epsilon\n",
         "else:\n",
         "    variable_params['epsilon'] = epsilon\n",
@@ -708,8 +703,8 @@
         "### Title y-axis\n",
         "x_axis = \"Volume (µL)\" #@param{type:\"string\"}\n",
         "\n",
-        "### Title leyend\n",
-        "Leyenda = \"Δ Absorbance\" #@param{type:\"string\"}\n",
+        "### Title legend\n",
+        "Legend = \"Δ Absorbance\" #@param{type:\"string\"}\n",
         "\n",
         "\n",
         "# Display Bokeh plots in the notebook\n",
@@ -731,7 +726,7 @@
         "p = figure(width=1200, height=700, title=Titulo)\n",
         "\n",
         "# Add a scatter-plot (experimental data)\n",
-        "scatter = p.scatter(x=v,y=deltaAbs_exp ,  legend_label=Leyenda, color='blue', size=10)\n",
+        "scatter = p.scatter(x=v,y=deltaAbs_exp ,  legend_label=Legend, color='blue', size=10)\n",
         "\n",
         "# Add a line with the model fitting\n",
         "p.line(x=v, y=fitted_deltaAbs, legend_label='Ajuste del modelo', color='red', line_width=3)\n",
@@ -747,10 +742,10 @@
         "p.xaxis.major_label_text_font_size = '12pt'\n",
         "p.yaxis.major_label_text_font_size = '12pt'\n",
         "\n",
-        "# Add the leyend\n",
+        "# Add the legend\n",
         "p.legend.title = 'Legend'\n",
         "\n",
-        "# Define the font size for the leyend\n",
+        "# Define the font size for the legend\n",
         "p.legend.label_text_font_size = '12pt'\n",
         "p.legend.title_text_font_size = '14pt'\n",
         "p.legend.location = \"bottom_right\"\n",
@@ -767,13 +762,13 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "cellView": "form",
-        "id": "aQsLE9dc-f1q"
+        "id": "aQsLE9dc-f1q",
+        "cellView": "form"
       },
       "outputs": [],
       "source": [
         "#@title Download data\n",
-        "#@markdown Write the name for the zip file that contains the data inputted and produced.\n",
+        "# @markdown Write the name for the zip file that contains the inputted and produced data.\n",
         "\n",
         "# Now let's record all the data that it has been inputted and generated to export it.\n",
         "\n",
@@ -830,7 +825,7 @@
         "    writer.writerow([''] * 7)\n",
         "\n",
         "    # Headers\n",
-        "    writer.writerow(['initialPar', '', '', 'parAjustados', '', '', 'sdPar'])\n",
+        "    writer.writerow(['initialPar', '', '', 'adjustedPar', '', '', 'sdPar'])\n",
         "\n",
         "    # Row 1: L, V0, Lo (verify whether they are optimized or not, and if the do not have sdPar)\n",
         "    writer.writerow([\n",
@@ -869,7 +864,7 @@
         "    writer.writerow([''] * 7)\n",
         "\n",
         "    # Detalles Section\n",
-        "    writer.writerow(['Detalles'])\n",
+        "    writer.writerow(['Details'])\n",
         "\n",
         "    # x values (convert floats to strings to concatenate with 'x')\n",
         "    writer.writerow(['x'] + [str(x) for x in results['detalles']['x']])\n",
@@ -945,7 +940,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM1Z0FT5py2+SQobJjPC3uF",
+      "authorship_tag": "ABX9TyOVR9iW7WJDmj7r2Vkng4u2",
       "include_colab_link": true
     },
     "kernelspec": {
